syntax = "proto3";

package todo.v1;

option go_package = "shared/proto/todo;todo";

service TodoService {
  // Membuat Todo baru
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
  
  // Mengambil satu Todo (untuk initial load page)
  rpc GetTodo (GetTodoRequest) returns (GetTodoResponse);
  
  // Mengambil list Todo
  rpc ListTodos (ListTodosRequest) returns (ListTodosResponse);
  
  // Mengupdate Todo (Trigger utama Realtime)
  rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse);
}

// Data Structures

message Todo {
  string id = 1;
  string title = 2;
  string body = 3;
  string created_at = 4;
  string updated_at = 5;
}

// Requests & Responses

message CreateTodoRequest {
  string title = 1;
  string body = 2;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message ListTodosRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListTodosResponse {
  repeated Todo todos = 1;
  int32 total_count = 2;
}

message UpdateTodoRequest {
  string id = 1;
  string title = 2;
  string body = 3;
}

message UpdateTodoResponse {
  Todo todo = 1;
}